# cequel

./: .gitignore  CMakeLists.txt  README.md  cequel.sln
.github/workflows/: msbuild.yml
cequel/: CMakeLists.txt  cequel.cpp  cequel.h  cequel.vcxproj  main.cpp
cequel-tests/: CMakeLists.txt
executable/: CMakeLists.txt
executable/sources/: main.cpp
tests/: CMakeLists.txt  tests.cpp  tests.vcxproj
tests/sources/: tests.cpp
